<resources>
    <string name="app_name">BAsics</string>


    <string name="action_settings">Settings</string>
    <string name="Enter_Num_1">Please enter a number</string>
    <string name="Enter_Num_2">Please enter a number</string>
    <string name="Answer">Answer</string>
    <string name="Run_it">RUN IT^</string>
    <string name="Addition">ADD</string>
    <string name="Subtraction">Subtract</string>
    <string name="Multiplication">Multiply</string>
    <string name="Division">Divide</string>
    <string name="title_activity_addition">Addition</string>
    <string name="title_activity_division">Division</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_multiplication">Multiplication</string>
    <string name="title_activity_subtraction">Subtraction</string>
</resources>
