<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Learners">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Multiplication"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Addition"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button"/>

    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/Division"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button4"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Subtraction"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/button3" />
</RelativeLayout>
